--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,25 @@ html, body {
     padding: 0;
 }
 
-img {
-    height: 50%;
-    width: 50%;
+.card-img {
+    /* height: 50%;
+    width: 50%; */
+    object-fit: cover;
+    height: 150px;
 }
 
 .card {
     width: 90%;
     margin: 0 auto;
     max-width: 800px;
+    background: #111d4a;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-content {
+    padding: 1em;
 }
 
 .card-title,
@@ -25,13 +35,40 @@ img {
 .card-title {
     color: #05cbe9;
     font-size: 1.75rem;
+    margin: 0;
 }
 
 .card-body {
     font-size: 1rem;
     font-family: 'Source Sans Pro', sans-serif;
+    line-height: 1.6;
+}
+
+.card-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-top: 3em;
 }
 
 .card-btn {
      font-size: 1.25rem;
+     background: #05cbe9;
+    color: #111d4a;
+    text-decoration: none;
+    font-weight: 700;
+    padding: .35em 1em;
+    letter-spacing: 1px;
+
+}
+
+.card-read-time {
+    margin: 0;
+    font-size: 16px;
+    opacity: .6;
+}
+
+.card-read-time span {
+    font-weight: 700;
+    display: block;
 }
