--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Blinker:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Blinker:wght@400;700&display=swap");
 
-html, body {
-    margin: 0;
-    padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
-
-
 
 .card {
-    width: 90%;
-    margin: 0 auto;
-    max-width: 800px;
-    background: #111d4a;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 800px;
+  background: #111d4a;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
 }
 
-@media (min-width: 600px) {
-    .card {
-        flex-direction: row;
-    }
-    
-    .card-img {
-        height: 300px;
-    }
-}
+
 
 .card-img {
-    object-fit: cover;
-    flex-basis: 200px;
-    min-width: 0;
-    min-height: 0;
+  object-fit: cover;
+  flex-basis: 200px;
+  min-width: 0;
+  min-height: 0;
 }
 
 .card-content {
-    padding: 1em;
+  padding: 1em;
 }
 
 .card-title,
 .card-read-time,
 .card-btn {
-    font-family: 'Blinker', sans-serif;
+  font-family: "Blinker", sans-serif;
 }
 
 .card-title {
-    color: #05cbe9;
-    font-size: 1.75rem;
-    margin: 0;
+  color: #05cbe9;
+  font-size: 1.75rem;
+  margin: 0;
 }
 
 .card-body {
-    font-size: 1rem;
-    font-family: 'Source Sans Pro', sans-serif;
-    line-height: 1.6;
+  font-size: 1rem;
+  font-family: "Source Sans Pro", sans-serif;
+  line-height: 1.6;
 }
 
 .card-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin-top: 3em;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 3em;
 }
 
 .card-btn {
-     font-size: 1.25rem;
-     background: #05cbe9;
-    color: #111d4a;
-    text-decoration: none;
-    font-weight: 700;
-    padding: .35em 1em;
-    letter-spacing: 1px;
-
+  font-size: 1.25rem;
+  background: #05cbe9;
+  color: #111d4a;
+  text-decoration: none;
+  font-weight: 700;
+  padding: 0.35em 1em;
+  letter-spacing: 1px;
 }
 
 .card-read-time {
-    margin: 0;
-    font-size: 16px;
-    opacity: .6;
-    line-height: 1;
+  margin: 0;
+  font-size: 16px;
+  opacity: 0.6;
+  line-height: 1;
 }
 
 .card-read-time span {
-    font-weight: 700;
-    display: block;
+  font-weight: 700;
+  display: block;
 }
+
+@media (min-width: 600px) {
+    .card {
+      flex-direction: row;
+    }
+  
+    .card-img {
+      height: 300px;
+    }
+  
+    .card-content {
+        display: flex;
+        flex-direction: column;
+    }
+  
+    .card-footer {
+        margin-top: auto;
+    }
+  }
