--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,15 @@ body {
         display: flex;
         flex-direction: column;
     }
+
+    .card-title {
+        font-size: 2.25rem;
+    }
+
+    .card-body {
+        font-size: 1.125rem;
+        max-width: 500px;
+    }
   
     .card-footer {
         margin-top: auto;
