--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ html,
 body {
   margin: 0;
   padding: 0;
+  /* min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
 .card {
